--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
    <div class="slider1"></div> 
+   <div class="slider2">
+    <div class="sl2-img1"></div>
+    <div class="sl2-img2"></div>
+    <div class="sl2-img3"></div>
+</div>
 </body>
 </html>
