work on slider 4

--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
     <div class="sl2-img3"></div>
 </div>
 <div class="slider3"></div>
+<div class="slider4">
+    <input type="radio" name="" id="l-radio">
+    <input type="radio" name="" id="r-radio">
+</div>
 </body>
 </html>
