--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 </div>
 <div class="slider3"></div>
 <div class="slider4">
-    <input type="radio" name="" id="l-radio">
-    <input type="radio" name="" id="r-radio">
+    <input type="checkbox" name="" id="l-radio">
+    <div class="animation-11"></div>
+    <input type="checkbox" name="" id="r-radio">
 </div>
 </body>
 </html>
