--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="slider3"></div>
 <div class="slider4">
     <input type="checkbox" name="" id="l-radio">
-    <div class="animation-11"></div>
+    <div id="animation-11"></div>
     <input type="checkbox" name="" id="r-radio">
 </div>
 </body>
