add images to gallery 5

--- a/index.html
+++ b/index.html
@@ -15,9 +15,18 @@
 </div>
 <div class="slider3"></div>
 <div class="slider4">
-    <input type="checkbox" name="" id="l-radio">
+    <input type="radio" name="check" id="l-radio">
     <div id="animation-11"></div>
-    <input type="checkbox" name="" id="r-radio">
+    <input type="radio" name="check" id="rightRadio">
+</div>
+<div class="slider5">
+    <input type="radio" name="check" id="l-radio2">
+    <div class="slider2">
+        <div class="sl2-img12"></div>
+        <div class="sl2-img22"></div>
+        <div class="sl2-img32"></div>
+    </div>
+    <input type="radio" name="check" id="r-radio2">
 </div>
 </body>
 </html>
