--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
 </div>
 <div class="slider3"></div>
 <div class="slider4">
+    <i class="fa fa-arrow-left fa-5x" aria-hidden="true"></i>
     <input type="radio" name="check" id="l-radio">
     <input type="radio" name="check" id="rightRadio">
     <div id="animation-11"></div>
+    <i class="fa fa-arrow-right fa-5x"></i>
     
 </div>
 <div class="slider5">
