--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="slider3"></div>
 <div class="slider4">
     <input type="radio" name="check" id="l-radio">
-    <i class="fa fa-arrow-left fa-5x" aria-hidden="true"></i>
+    <i class="fa fa-arrow-left fa-5x"></i>
     <input type="radio" name="check" id="rightRadio">
     <div id="animation-11"></div>
     <i class="fa fa-arrow-right fa-5x"></i>
@@ -25,12 +25,14 @@
 </div>
 <div class="slider5">
     <input type="radio" name="check" id="l-radio2">
+    <input type="radio" name="check" id="r-radio2">
+    <i class="fa fa-arrow-left fa-5x"></i>
     <div class="slider2">
         <div class="sl2-img12"></div>
         <div class="sl2-img22"></div>
         <div class="sl2-img32"></div>
     </div>
-    <input type="radio" name="check" id="r-radio2">
+    <i class="fa fa-arrow-right fa-5x"></i>
 </div>
 <div class="slider6">
     <input type="radio" name="check" id="l-radio3">
