add anims to task 5

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <input type="radio" name="check" id="r-radio2">
     <i class="fa fa-arrow-left fa-5x"></i>
     <div class="slider2">
-        <div class="sl2-img12"></div>
-        <div class="sl2-img22"></div>
-        <div class="sl2-img32"></div>
+        <div class="sl2-img12" id="img1"></div>
+        <div class="sl2-img22" id="img2"></div>
+        <div class="sl2-img32" id="img3"></div>
     </div>
     <i class="fa fa-arrow-right fa-5x"></i>
 </div>
