--- a/index.html
+++ b/index.html
@@ -35,19 +35,23 @@
     <i class="fa fa-arrow-right fa-5x"></i>
 </div>
 <div class="slider6">
-    <input type="radio" name="check" id="l-radio3">
     <div class="wrapper">
-        <img src="images/comic-img1.jpg" alt="" class="img-1">
-        <img src="images/comic-img2.jpg" alt="" class="img-2">
-        <img src="images/comic-img3.jpg" alt="" class="img-3">
-        <img src="images/comic-img4.jpg" alt="" class="img-4">
-        <img src="images/comic-img5.jpg" alt="" class="img-5">
-        <img src="images/comic-img6.jpg" alt="" class="img-6">
-        <img src="images/comic-img7.jpg" alt="" class="img-7">
-        <img src="images/comic-img8.jpg" alt="" class="img-8">
-        <img src="images/comic-img9.jpg" alt="" class="img-9">
+        <input type="radio" name="check" id="l-radio3">
+        <input type="radio" name="check" id="r-radio3">
+        <i class="fa fa-arrow-left fa-5x"></i>
+        <div class="slide-track" id="slide-trk">
+            <img src="images/comic-img1.jpg" alt="" class="img-1">
+            <img src="images/comic-img2.jpg" alt="" class="img-2">
+            <img src="images/comic-img3.jpg" alt="" class="img-3">
+            <img src="images/comic-img4.jpg" alt="" class="img-4">
+            <img src="images/comic-img5.jpg" alt="" class="img-5">
+            <img src="images/comic-img6.jpg" alt="" class="img-6">
+            <img src="images/comic-img7.jpg" alt="" class="img-7">
+            <img src="images/comic-img8.jpg" alt="" class="img-8">
+            <img src="images/comic-img9.jpg" alt="" class="img-9">
+        </div>
     </div>
-    <input type="radio" name="check" id="r-radio3">
+    <i class="fa fa-arrow-right fa-5x"></i>
 </div>
 </body>
 </html>
