--- a/index.html
+++ b/index.html
@@ -24,15 +24,16 @@
     
 </div>
 <div class="slider5">
-    <input type="radio" name="check" id="l-radio2">
-    <input type="radio" name="check" id="r-radio2">
-    <i class="fa fa-arrow-left fa-5x"></i>
     <div class="slider2">
-        <div class="sl2-img12" id="img1"></div>
-        <div class="sl2-img22" id="img2"></div>
-        <div class="sl2-img32" id="img3"></div>
+        <i class="fa fa-arrow-left fa-5x" id="slide5-l-arrow"></i>
+        <input type="radio" name="check" id="l-radio2">
+        <input type="radio" name="check" id="r-radio2">
+        <i class="fa fa-arrow-right fa-5x" id="slide5-r-arrow"></i>
+        <div id="img1"></div>
+        <div id="img2"></div>
+        <div id="img3"></div>
+       
     </div>
-    <i class="fa fa-arrow-right fa-5x"></i>
 </div>
 <div class="slider6">
     <div class="wrapper">
